--- a/service-single.html
+++ b/service-single.html
@@ -56,7 +56,7 @@
     <main class="main">
 
         <!-- breadcrumb -->
-        <div class="site-breadcrumb" style="background: url(assets/img/breadcrumb/01.jpg)">
+        <div class="site-breadcrumb" style="background: url(assets/company-assets/girl-painting.jpg)">
             <div class="container">
                 <h2 class="breadcrumb-title">Service Single</h2>
                 <ul class="breadcrumb-menu">
@@ -106,87 +106,104 @@
                         <div class="col-xl-8 col-lg-8">
                             <div class="service-details">
                                 <div class="mb-30">
-                                    <img src="assets/img/service/single.jpg" alt="thumb">
+                                    <img src="assets/company-assets/products-banner.png" alt="thumb">
                                 </div>
                                 <div class="content">
-                                    <h3 class="mb-20">Lorem, ipsum dolor.</h3>
+                                    <h3 class="mb-20">Our Products</h3>
                                     <p class="mb-20">
-                                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                                        veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                                        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
-                                        porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                                        velit, sed quia non numquam eius modi tempora incidunt ut labore et.
-                                    </p>
-                                    <p class="mb-20">
-                                        But I must explain to you how all this mistaken idea of denouncing pleasure and
-                                        praising pain was born and I will give you a complete account of the system, and
-                                        expound the actual teachings of the great explorer of the truth, the
-                                        master-builder of human happiness. No one rejects, dislikes, or avoids pleasure
-                                        itself, because it is pleasure, but because those who do not know how to pursue
-                                        pleasure rationally encounter consequences that are extremely painful. Nor again
-                                        is there anyone who loves or pursues or desires to obtain pain of itself,
-                                        because it is pain, but because occasionally circumstances occur in which toil
-                                        and pain can procure him some great pleasure. To take a trivial example
-                                    </p>
+                                        At Pie Chemicals LLP, we take pride in offering a diverse range of high-quality
+                                        chemical products tailored to meet the needs of various industries. Our product
+                                        line includes:</p>
+                                    <div class="my-4">
+                                        <h5>Adhesives:</h5>
+                                        <li>Versatile and strong bonding solutions for industrial and commercial
+                                            applications.</li>
+                                        <li>Designed for durability and performance in various environments.</li>
+                                    </div>
+                                    <div class="my-4">
+                                        <h5>Home Care Products:</h5>
+                                        <li>Effective and eco-friendly cleaning solutions for a healthier home.</li>
+                                        <li>Developed with the highest standards to ensure safety and quality.</li>
+                                    </div>
+                                    <div class="my-4">
+                                        <h5>Specialty Chemicals:</h5>
+                                        <li>Customized chemical solutions for specific industrial applications.</li>
+                                        <li>Designed to optimize efficiency and enhance productivity.</li>
+                                    </div>
+                                    <div class="my-4">
+                                        <h5>Industrial Chemicals:</h5>
+                                        <li>High-performance chemicals to support a wide range of manufacturing
+                                            processes.</li>
+                                        <li>Known for their reliability and adherence to global standards.</li>
+                                    </div>
 
-                                    <div class="row">
+                                    <!-- <div class="row">
                                         <div class="col-md-6 mb-20">
                                             <img src="assets/img/service/01.jpg" alt="">
                                         </div>
                                         <div class="col-md-6 mb-20">
                                             <img src="assets/img/service/02.jpg" alt="">
                                         </div>
-                                    </div>
-                                    <p class="mb-20">
-                                        Power of choice is untrammelled and when nothing prevents our being able to do
-                                        what we like best, every pleasure is to be welcomed and every pain avoided. But
-                                        in certain circumstances and owing to the claims of duty or the obligations of
-                                        business it will frequently occur that pleasures have to be repudiated and
-                                        annoyances accepted. The wise man therefore always holds in these matters to
-                                        this principle of selection.
-                                    </p>
+                                    </div> -->
+
                                     <div class="my-4">
                                         <div class="mb-3">
                                             <h3 class="mb-3">Our Work Process</h3>
-                                            <p>Aliquam facilisis rhoncus nunc, non vestibulum mauris volutpat non.
-                                                Vivamus tincidunt accumsan urna, vel aliquet nunc commodo tristique.
-                                                Nulla facilisi. Phasellus vel ex nulla. Nunc tristique sapien id mauris
-                                                efficitur, porta scelerisque nisl dignissim. Vestibulum ante ipsum
-                                                primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed at
-                                                mollis tellus. Proin consequat, orci nec bibendum viverra, ante orci
-                                                suscipit dolor, et condimentum felis dolor ac lectus.</p>
+                                            <p class="mb-20">
+                                                At Pie Chemicals LLP, we follow a streamlined process to ensure
+                                                exceptional
+                                                product quality and customer satisfaction:
+                                            </p>
                                         </div>
-                                        <ul class="list">
-                                            <li><i class="far fa-check-double"></i>Fusce justo risus placerat in risus
-                                                eget
-                                                tincidunt consequat elit.</li>
-                                            <li><i class="far fa-check-double"></i>Nunc fermentum sem sit amet dolor
-                                                laoreet
-                                                placerat.</li>
-                                            <li><i class="far fa-check-double"></i>Nullam rhoncus dictum diam quis
-                                                ultrices.
+                                        <div class="my-4">
+                                            <h5>Research & Development</h5>
+                                            <li>Rigorous R&D to create innovative solutions that meet evolving industry
+                                                needs.</li>
+                                            <li>Focus on sustainable and eco-friendly formulations.</li>
+                                        </div>
+
+                                        <div class="my-4">
+                                            <h5>Production</h5>
+                                            <li>State-of-the-art facilities equipped with advanced technology.</li>
+                                            <li>Adherence to strict quality control measures at every step.</li>
+                                        </div>
+
+                                        <div class="my-4">
+                                            <h5>Quality Assurance</h5>
+                                            <li>Comprehensive testing to ensure compliance with global standards.</li>
+                                            <li>Commitment to delivering safe, reliable, and high-quality products.
                                             </li>
-                                            <li><i class="far fa-check-double"></i>Integer quis lorem est uspendisse eu
-                                                augue
-                                                porta ullamcorper dictum.</li>
-                                            <li><i class="far fa-check-double"></i>Quisque tristique neque arcu ut
-                                                venenatis
-                                                felis malesuada et.</li>
-                                        </ul>
+                                        </div>
                                     </div>
                                     <div class="mt-4">
-                                        <h3 class="mb-3">Why Choose Our Services ?</h3>
-                                        <p>Quisque a nisl id sem sollicitudin volutpat. Cras et commodo quam, vel congue
-                                            ligula. Orci varius natoque penatibus et magnis dis parturient montes,
-                                            nascetur ridiculus mus. Cras quis venenatis neque. Donec volutpat tellus
-                                            lobortis mi ornare eleifend. Fusce eu nisl ut diam ultricies accumsan.
-                                            Integer lobortis vestibulum nunc id porta. Curabitur aliquam arcu sed ex
-                                            dictum, a facilisis urna porttitor. Fusce et mattis nisl. Sed iaculis libero
-                                            consequat justo auctor iaculis. Vestibulum sed ex et magna tristique
-                                            bibendum. Sed hendrerit neque nec est suscipit, id faucibus dolor convallis.
-                                        </p>
+                                        <h3 class=" mb-4">Why To Choose us?</h3>
+                                        <div class="my-4">
+                                            <h5>Quality Assurance</h5>
+                                            <li>Comprehensive testing to ensure compliance with global standards.</li>
+                                            <li>Commitment to delivering safe, reliable, and high-quality products.</li>
+                                        </div>
+                                        <div class="my-4">
+                                            <h5>Expertise & Experience</h5>
+                                            <li>Decades of experience and a dedicated team of industry experts.</li>
+                                            <li>Innovative solutions driven by a passion for excellence.</li>
+                                        </div>
+                                        <div class="my-4">
+                                            <h5>Sustainability Focus</h5>
+                                            <li>Commitment to eco-friendly practices and sustainable product
+                                                development.</li>
+                                            <li>Focus on reducing environmental impact in every process.</li>
+                                        </div>
+                                        <div class="my-4">
+                                            <h5>Customer-Centric Approach</h5>
+                                            <li>Personalized solutions tailored to meet unique client needs.</li>
+                                            <li>Prompt support and seamless communication to ensure satisfaction.</li>
+                                        </div>
+                                        <div class="my-4">
+                                            <h5>Global Reach</h5>
+                                            <li>Robust infrastructure and distribution channels to serve clients across
+                                                the globe.</li>
+                                            <li>Strong network ensuring timely delivery and excellent service.</li>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
