--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
     <!-- hero area -->
   <div class="hero-section ">
     <div class="hero-slider owl-carousel">
+      <div class="hero-single" style="background-image: url(assets/company-assets/products-banner.png);">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-12 col-lg-6">
+              <!-- <div class="hero-content">
+                <h6 class="hero-sub-title" data-animation="fadeInUp" data-delay=".25s">
+                  <i class="far fa-solar-panel"></i> Easy and reliable
+                </h6>
+                <h1 class="hero-title" data-animation="fadeInRight" data-delay=".50s">
+                  Empowering Coatings with <span>Premium </span> Acrylic Emulsions
+                </h1>
+                <p data-animation="fadeInLeft" data-delay=".75s">
+                  Experience unmatched quality and innovation in coating solutions designed to enhance durability and
+                  aesthetics.
+                </p>
+                <div class="hero-btn" data-animation="fadeInUp" data-delay="1s">
+                  <a href="about.html" class="theme-btn">About More<i class="fas fa-arrow-right"></i></a>
+                  <a href="contact.html" class="theme-btn2">Learn More<i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="hero-single"
         style="background-image: linear-gradient(to right, rgba(6, 78, 90, 1) 0%, rgba(6, 78, 90, 0)), url(assets/company-assets/slider-1.jpg);">
         <div class="container">
