--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from live.themewild.com/solario/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 12:40:15 GMT -->
+
 <head>
     <!-- meta tags -->
     <meta charset="UTF-8">
@@ -54,8 +54,12 @@
                     <div class="header-top-left">
                         <div class="header-top-list">
                             <ul>
-                                <li><a href="https://live.themewild.com/cdn-cgi/l/email-protection#721b1c141d32170a131f021e175c111d1f"><i class="far fa-envelopes"></i>
-                                        <span class="__cf_email__" data-cfemail="127b7c747d52776a737f627e773c717d7f">[email&#160;protected]</span></a></li>
+                                <li><a
+                                        href="https://live.themewild.com/cdn-cgi/l/email-protection#721b1c141d32170a131f021e175c111d1f"><i
+                                            class="far fa-envelopes"></i>
+                                        <span class="__cf_email__"
+                                            data-cfemail="127b7c747d52776a737f627e773c717d7f">[email&#160;protected]</span></a>
+                                </li>
                                 <li><a href="tel:+21236547898"><i class="far fa-phone-volume"></i> +2 123 654 7898</a>
                                 </li>
                                 <li><a href="#"><i class="far fa-alarm-clock"></i> Sun - Fri (08AM - 10PM)</a></li>
@@ -149,9 +153,12 @@
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item dropdown-toggle" href="#">Portfolio</a>
                                             <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="portfolio.html">Portfolio One</a></li>
-                                                <li><a class="dropdown-item" href="portfolio-2.html">Portfolio Two</a></li>
-                                                <li><a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a></li>
+                                                <li><a class="dropdown-item" href="portfolio.html">Portfolio One</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="portfolio-2.html">Portfolio Two</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="portfolio-single.html">Portfolio
+                                                        Single</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown-submenu">
@@ -205,7 +212,8 @@
                                             class="far fa-search"></i></button>
                                 </div>
                                 <div class="shop-cart">
-                                    <a href="shop-cart.html" class="nav-right-link"><i class="far fa-shopping-bag"></i><span>0</span></a>
+                                    <a href="shop-cart.html" class="nav-right-link"><i
+                                            class="far fa-shopping-bag"></i><span>0</span></a>
                                 </div>
                                 <div class="nav-btn">
                                     <a href="contact.html" class="theme-btn">Let's Talk<i
@@ -268,7 +276,10 @@
                             </div>
                             <div class="content">
                                 <h6>Email</h6>
-                                <a href="https://live.themewild.com/cdn-cgi/l/email-protection#1b72757d745b7e637a766b777e35787476"><span class="__cf_email__" data-cfemail="6f060109002f0a170e021f030a410c0002">[email&#160;protected]</span></a>
+                                <a
+                                    href="https://live.themewild.com/cdn-cgi/l/email-protection#1b72757d745b7e637a766b777e35787476"><span
+                                        class="__cf_email__"
+                                        data-cfemail="6f060109002f0a170e021f030a410c0002">[email&#160;protected]</span></a>
                             </div>
                         </li>
                         <li>
@@ -381,11 +392,16 @@
                                 <h4 class="footer-widget-title">Company</h4>
                                 <ul class="footer-list">
                                     <li><a href="about.html"><i class="far fa-angle-double-right"></i>About Us</a></li>
-                                    <li><a href="blog.html"><i class="far fa-angle-double-right"></i>Update News</a></li>
-                                    <li><a href="testimonial.html"><i class="far fa-angle-double-right"></i>Testimonials</a></li>
-                                    <li><a href="contact.html"><i class="far fa-angle-double-right"></i>Contact Us</a></li>
-                                    <li><a href="terms.html"><i class="far fa-angle-double-right"></i>Terms Of Service</a></li>
-                                    <li><a href="privacy.html"><i class="far fa-angle-double-right"></i>Privacy policy</a></li>
+                                    <li><a href="blog.html"><i class="far fa-angle-double-right"></i>Update News</a>
+                                    </li>
+                                    <li><a href="testimonial.html"><i
+                                                class="far fa-angle-double-right"></i>Testimonials</a></li>
+                                    <li><a href="contact.html"><i class="far fa-angle-double-right"></i>Contact Us</a>
+                                    </li>
+                                    <li><a href="terms.html"><i class="far fa-angle-double-right"></i>Terms Of
+                                            Service</a></li>
+                                    <li><a href="privacy.html"><i class="far fa-angle-double-right"></i>Privacy
+                                            policy</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -393,12 +409,18 @@
                             <div class="footer-widget-box list">
                                 <h4 class="footer-widget-title">Services</h4>
                                 <ul class="footer-list">
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Solar Panels</a></li>
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Wind Generators</a></li>
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Easy Installation</a></li>
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Solar Maintenance</a></li>
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Hydraulic Power</a></li>
-                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Fossil Resources</a></li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Solar Panels</a>
+                                    </li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Wind
+                                            Generators</a></li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Easy
+                                            Installation</a></li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Solar
+                                            Maintenance</a></li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Hydraulic
+                                            Power</a></li>
+                                    <li><a href="service.html"><i class="far fa-angle-double-right"></i>Fossil
+                                            Resources</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -430,7 +452,10 @@
                                         </div>
                                         <div class="content">
                                             <h6>Mail Us</h6>
-                                            <a href="https://live.themewild.com/cdn-cgi/l/email-protection#0d64636b624d68756c607d6168236e6260"><span class="__cf_email__" data-cfemail="d6bfb8b0b996b3aeb7bba6bab3f8b5b9bb">[email&#160;protected]</span></a>
+                                            <a
+                                                href="https://live.themewild.com/cdn-cgi/l/email-protection#0d64636b624d68756c607d6168236e6260"><span
+                                                    class="__cf_email__"
+                                                    data-cfemail="d6bfb8b0b996b3aeb7bba6bab3f8b5b9bb">[email&#160;protected]</span></a>
                                         </div>
                                     </li>
                                 </ul>
@@ -469,7 +494,8 @@
 
 
     <!-- js -->
-    <script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/modernizr.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/imagesloaded.pkgd.min.js"></script>
@@ -486,9 +512,5 @@
 </body>
 
 
-<!-- Mirrored from live.themewild.com/solario/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 12:40:16 GMT -->
+
 </html>
-
-
-
-
